--- a/client/index.html
+++ b/client/index.html
@@ -13,11 +13,11 @@
       </div>
       <blockquote>
         <ul>
-          <li>1) Going to the path https://wanjongkim-request-header/api/whoami you can receive information about the your browser in JSON format</li>
+          <li>1) Going to the path https://wanjongkim-request-header.herokuapp.com/api/whoami you can receive information about the your browser in JSON format</li>
           <li>2) The information included in the JSON will be the IP address, language, and software of the browser</li>
         </ul>
       </blockquote>
-      <p>Example: https://wanjongkim-request-header/api/whoami</p>
+      <p>Example: https://wanjongkim-request-header.herokuapp.com/api/whoami</p>
       <p>Returns: {"ipaddress":"68.172.233.201","language":"en-US,en;q=0.8","software":"Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/51.0.2704.103 Safari/537.36"}</p>
     </div>
     <script src="/socket.io/socket.io.js"></script>
